# cc-tutorial

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_en.md
.claude/commands/: commit-push.md
.claude/rules/: evidence-based.md  voice-and-tone.md
docs/: README.md  article-2026-coding-evolution-video-script.md  article-2026-coding-evolution.md
docs/research/: 00-research-summary.md  01-claude-code-best-practices-anthropic-official.md  02-plan-mode-guide-official.md  03-andrew-ng-course-outline.md  04-addy-osmani-2026-workflow.md  05-boris-cherny-workflow-x-thread.md
docs/tutorial/: 00-tutorial-overview.md
docs/video-scripts/: 90min-master-outline.md  README.md  episode-outline-template.md  layer-01-theory.md  layer-02-setup.md  layer-03-basics.md  layer-04-workflow.md  layer-05-config.md  layer-06-advanced.md  layer-07-caveats.md  layer-08-practice.md  layer-09-supplement.md  module-01-episodes.md  module-02-episodes.md  module-05-episodes.md  (+5 more)
examples/asr/: .gitignore  capture.py  config.py  engine.py  gui.py  main.py  pyproject.toml  subtitle.py
research/: 00-research-summary.md  01-claude-code-best-practices-anthropic-official.md  03-andrew-ng-course-outline.md  04-addy-osmani-2026-workflow.md  06-anthropic-internal-ai-transforming-work.md  07-hwchase17-react-prompt.md  07-lsp-language-server-protocol.md
video-scripts/: README.md  layer-01-theory.md  layer-02-setup.md  layer-05-config.md  layer-06-advanced.md  layer-07-caveats.md  layer-08-practice.md  layer-09-supplement.md  official-plugin.md  supplement-attention-mechanism.md  supplement-mcp.md
(+102 files in other folders)
